# torch-book

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pyproject1.toml  tasks.py  test.ipynb
.github/workflows/: pages.yml  python-publish.yml
doc/: .gitignore  _config.toml  conf.py  config.md  index.md  notion.md  refs.bib  serve.py
doc/TorchCodec/: index.md  install.md
doc/TorchCodec/audio/: encoding.ipynb  index.md
doc/TorchCodec/video/: approximate-mode.ipynb  basic-cuda-example.ipynb  basic-example.ipynb  custom-frame-mappings.ipynb  encoding.ipynb  file-like.ipynb  index.md  parallel-decoding.ipynb  sampling.ipynb
doc/_static/: switcher.json
doc/api/: index.rst  torch_book.plotx.Animator.rst  torch_book.plotx.BoardX.rst  torch_book.plotx.annotate.rst  torch_book.plotx.enable_svg.rst  torch_book.plotx.plot.rst  torch_book.plotx.set_axes.rst  torch_book.plotx.set_figsize.rst  torch_book.plotx.show_images.rst
doc/api/torch_book/: index.rst
doc/appendix/: index.md  refs.md
doc/appendix/others/: book.md  index.md  raw.md
doc/appendix/terms/: index.md  numpy.md  pytorch.md  sr.md
doc/concepts/: index.md  programming-with-data.ipynb
doc/concepts/autograd/: index.md  internals.ipynb
doc/concepts/calculus/: index.md
doc/concepts/compression/: index.md
doc/concepts/differential-calculus/: index.md
doc/concepts/dispatcher/: FlopCounterMode.ipynb  TorchDispatchMode.ipynb  index.md  intro.ipynb
doc/concepts/linear-algebra/: index.md  tensor.ipynb  vector-space.ipynb
doc/concepts/probability/: index.md
doc/concepts/pytorch-code/: code-struct.md  index.md
doc/concepts/quaternion/: cv.ipynb  index.md
doc/concepts/tensor/: FakeTensorMode.ipynb  index.md  internals.ipynb  meta-tensor.ipynb  meta.ipynb
doc/concepts/transfer-learning/: cv.ipynb  index.md
doc/datasets/: index.md
doc/datasets/cv/: CelebA.ipynb  DIV2K.ipynb  Set5.ipynb  index.md  set_env.py
doc/deploy/: docker.ipynb  index.md
doc/design/: index.md  intro.ipynb
doc/design/complexity/: DMAs.ipynb  MACs.ipynb
doc/design/models/: timm.ipynb
doc/ecosystem/: index.md
doc/ecosystem/Captum/: index.md
doc/ecosystem/ExecuTorch/: index.md
doc/ecosystem/LightlySSL/: index.md
doc/ecosystem/OpenMMLab/: index.md
doc/ecosystem/PyTorchVideo/: index.md
doc/ecosystem/Ray/: index.md
doc/ecosystem/Renate/: index.md
doc/ecosystem/SLRT/: TwoStreamNetwork.md  index.md
doc/ecosystem/TorchDrug/: index.md
doc/ecosystem/TorchIO/: index.md
doc/ecosystem/TorchOpt/: index.md
doc/ecosystem/depyf/: index.md  walk-through.ipynb
doc/ecosystem/flower/: index.md
doc/ecosystem/usb/: index.md
doc/glossary/: index.md
doc/models/: index.md
doc/others/: faqs.md  index.md  raw.md  refs.md
doc/paper/: index.md
doc/recipes/: index.md
doc/refs/: index.md  parameter.ipynb
doc/sr/: index.md
doc/tips/: index.md  read-paper.ipynb
doc/tutorial/: .gitignore  index.md
doc/tutorials/: index.md
doc/ultralytics/: .gitignore  index.md  intro.ipynb
src/torch_book/: __init__.py  _tools.py  classifier.py  loader.py  model.py  optim.py  plotx.py  runner.py  tools.py  utils.py
src/xyzstyle/: __init__.py
tests/: .gitignore  FLOPs.ipynb  env.py  index.md  init_openmmlab.sh  test.ipynb  test.py
tests/chaos/: executorch-test.ipynb  scan.ipynb  test.ipynb
tests/cifar10/: cifar10-resnet18-silu copy.ipynb  cifar10-resnet18-silu.ipynb  resnet18_silu.py
tests/data/: index.md
tests/refs/: index.md  sr.md  what.md
tests/tools/: d2l.py  set_tensorflow.py
(+511 files in other folders)
