[project]
name = "torch-book"
version = "0.1.2"
description = "道法自然"
authors = [
    {name = "xinetzone", email = "735613050@qq.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]
dependencies = []

[project.urls]
Home = "https://github.com/xinetzone/torch-book"

[project.optional-dependencies]
doc = [
    "mystx",
    "sphinx",
    # "ablog",
    "ipywidgets",
    "folium",
    "numpy",
    "matplotlib",
    "sphinx-comments",
    "nbclient",
    "pandas",
    "plotly",
    "sphinx-design",
    "sphinx-examples",
    "sphinx-copybutton",
    "sphinx-contributors",
    "sphinx-thebe",
    "sphinxcontrib-bibtex",
    "sphinxext-opengraph",
    "sphinx-sitemap",
    "sphinx-autoapi>=3.4",
    "graphviz",
    "sphinxcontrib-mermaid",
    "sphinx-proof",
    "ultralytics",
]

flows = [
    "taolib[flows]",
]

gui = [
  "PySide6",
]

dev = [
  "torchao",
  "executorch"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
